# TAMUSA-NOTEPAD-EXPERTS

./: .dockerignore  .gitignore  Dockerfile  FONT_FEATURES.md  FileGUI.py  LICENSE  PyDaBest.txt  README.md  emoji_test.py  execute.py  file.py  fonts.py  notepad.py  pyproject.toml  requirements.txt  unit_tests.py
.github/workflows/: trivy.yml
TAMUSA_NOTEPAD/: .gitignore  emoji.py  notepad.py  pyproject.toml
