[project]
name = "tamusa-notepad"
version = "0.1.0"
description = "This project is a simple text-based editor implemented in Python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
tamusa-notepad = "execute:main"

[project.optional-dependencies]
dev = [
    "black==24.3.0",
    "isort==5.13.2",
    "pytest==8.4.2",
    "pylint==3.3.9",
]
