[project]
name = "tamusa-notepad"
version = "0.1.0"
description = "This project is a simple text-based editor implemented in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astroid==2.15.5",
    "asttokens==2.4.1",
    "black==24.3.0",
    "blinker==1.9.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "comm==0.2.2",
    "debugpy==1.8.8",
    "decorator==5.1.1",
    "dill==0.3.9",
    "executing==2.1.0",
    "flask==2.3.2",
    "graphviz==0.20.1",
    "greenlet==3.1.1",
    "iniconfig==2.0.0",
    "ipykernel==6.29.5",
    "ipython==8.29.0",
    "isort==5.13.2",
    "itsdangerous==2.2.0",
    "javalang==0.13.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "lazy-object-proxy==1.10.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mccabe==0.7.0",
    "mypy-extensions==1.0.0",
    "nest-asyncio==1.6.0",
    "networkx==3.1",
    "numpy==2.1.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "platformdirs==4.3.6",
    "pluggy==1.5.0",
    "prompt-toolkit==3.0.48",
    "psutil==6.1.0",
    "pure-eval==0.2.3",
    "pygments==2.18.0",
    "pylint==2.17.4",
    "pytest==7.3.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.0",
    "pytz==2024.2",
    "pywin32==308",
    "pyzmq==26.2.0",
    "six==1.16.0",
    "stack-data==0.6.3",
    "tomlkit==0.13.2",
    "tornado==6.5",
    "traitlets==5.14.3",
    "tzdata==2024.2",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "wrapt==1.16.0",
]
